# swagger-conta-v1.yaml
@@ -459,7 +459,6 @@ paths:
       tags:
         - contaCorrente
       summary: retorna o extrato da conta
-      description: For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions.
       operationId: getOrderById
       parameters:
         - name: idConta
@@ -490,6 +489,84 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/extrato'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Order not found
+          
+          
+  /contaCorrente/pix/{idConta}/{chave}:
+    get:
+      tags:
+        - contaCorrente
+      summary: retorna a conta pela chave pix
+      operationId: getPix
+      parameters:
+        - name: idConta
+          in: path
+          description: ID da conta
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: chave
+          in: path
+          description: chavepix
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/contaCorrente'          
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/contaCorrente'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Order not found
+          
+  /contaCorrente/pix/{idConta}:        
+    post:
+      tags:
+        - contaCorrente
+      summary: cadastra chave pix
+      operationId: postOrderById
+      parameters:
+        - name: idConta
+          in: path
+          description: ID da conta
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/chave'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/chave'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/chave'
+        required: true
+         
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/contaCorrente'          
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/contaCorrente'
         '400':
           description: Invalid ID supplied
         '404':
@@ -541,6 +618,9 @@ components:
         saldo:
           type: number
           example: 0
+        chavePix:
+          type: string
+          example: 'ckahsldkas'
       xml:
         name: contaCorrente
 
@@ -636,6 +716,15 @@ components:
             $ref: '#/components/schemas/cheque'
       xml:
         name: cheques
+      
+    chave:
+      type: object
+      properties:
+        chave:
+          type: string
+          example: "askdasjkds"
+      xml:
+        name: chave
         
     saldo:
       type: object
